# bm_core

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  bm_config_template.h  proto_bcmp.lua
.github/: pull_request_template.md
.github/workflows/: docs.yml  unit_tests.yml
bcmp/: CMakeLists.txt  bcmp.c  bcmp.h  bm_configs_generic.h  bm_dfu_generic.h  config.c  configuration.c  configuration.h  dfu.h  dfu_client.c  dfu_client.h  dfu_core.c  dfu_host.c  dfu_host.h  heartbeat.c  info.c  messages.h  neighbors.c  packet.c  packet.h  ping.c  resource_discovery.c  time.c  topology.c
bcmp/messages/: config.h  info.h  neighbors.h  resource_discovery.h  topology.h
cmake/: bm_core.cmake
common/: CMakeLists.txt  aligned_malloc.c  aligned_malloc.h  bm_common_structs.h  bm_freertos.c  bm_os.h  bm_posix.c  cb_queue.c  cb_queue.h  hash.c  hash.h  lib_state_machine.c  lib_state_machine.h  ll.c  ll.h  pcap.c  pcap.h  q.c  q.h  queue.c  timer_callback_handler.c  timer_callback_handler.h  util.c  util.h
docs/: api.md  conf.py  config_eeprom_example.drawio  index.md  requirements.txt  usage.md
docs/_templates/: layout.html
docs/api/: api.md  configs.md  integrations.md  pubsub.md  services.md  time.md
docs/reference/: bcmp.drawio  bcmp.md  index.md  integrations.md  l2.drawio  l2.md  middleware.drawio  middleware.md  reference.md  test.md  utilities.md  wrappers.md
docs/src/: api.md  index.rst  usage.md
docs/src/_templates/: layout.html
drivers/: bm_network_generic.h
drivers/adin2111/: CMakeLists.txt  adi_hal.h  adi_hal_port_specific.h  adi_mac.c  adi_mac.h  adin2111.c  adin2111.h  bm_adin2111.c  bm_adin2111.h
include/: bcmp.h  bcmp_rtc.h  bm_configs_generic.h  bm_dfu_generic.h  bm_ip.h  bm_rtc.h  bm_service_request.h  cbor_service_helper.h  config_cbor_map_service.h  device.h  echo_service.h  heartbeat.h  l2.h  ll.h  messages.h  packet.h  pubsub.h  sys_info_service.h  time.h  tinycbor_alloc.h  util.h
include/dfu/: dfu.h  dfu_client.h  dfu_host.h  dfu_message_structs.h
include/messages/: config.h  heartbeat.h  info.h  neighbors.h  ping.h  resource_discovery.h  topology.h
integrations/: CMakeLists.txt  file_ops.c  file_ops.h  spotter.c  spotter.h  topology.c  topology.h
middleware/: CMakeLists.txt  bm_mavlink.c  bm_mavlink.h  bm_service.c  bm_service.h  bm_service_request.c  bm_service_request.h  bristlemouth.c  bristlemouth.h  cbor_service_helper.c  config_cbor_map_service.h  echo_service.c  metrics_component.h  metrics_network_component.c  metrics_network_component.h  metrics_service.c  metrics_service.h  middleware.c  middleware.h  power_info_service.c  power_info_service.h  pubsub.c  pubsub.h  resource_trie.c  resource_trie.h
network/: CMakeLists.txt  bm_ip.h  bm_link_heartbeat_monitor.c  bm_link_heartbeat_monitor.h  bm_linux.c  bm_lwip.c  l2.c  l2.h  l2_policy.c  l2_policy.h  network_device.h  network_frames.h  network_interface.h
src/: bcmp.c  bm_service.c  bm_service_request.c  cbor_service_helper.c  config.c  config_cbor_map_service.c  device.c  echo_service.c  heartbeat.c  info.c  l2.c  ll.c  middleware.c  neighbors.c  packet.c  ping.c  pubsub.c  resource_discovery.c  service.c  sys_info_service.c  time.c  topology.c  util.c
src/bm_os/: bm_os.h
src/bm_os/platform/: bm_freertos.c
src/dfu/: dfu_client.c  dfu_core.c  dfu_host.c
src/platform/: bm_lwip.c
test/: CMakeLists.txt  README.md  helpers.hpp
test/mocks/: bm_config.h  bm_os.h  ip_addr.h  mock_bcmp.h  mock_bm_adin2111.h  mock_bm_dfu_generic.h  mock_bm_ip.h  mock_bm_os.h  mock_bm_rtc.h  mock_bm_service.h  mock_bm_service_request.h  mock_cb_queue.h  mock_cbor_service_helper.h  mock_config.h  mock_config_cbor_map_srv_reply_msg.h  mock_config_cbor_map_srv_request_msg.h  mock_configuration.h  mock_device.h  mock_dfu.h  mock_heartbeat.h  mock_info.h  mock_l2.h  mock_middleware.h  mock_neighbors.h  mock_packet.h  mock_ping.h  mock_power_info_reply_msg.h  mock_power_info_service.h  mock_pubsub.h  mock_resource_discovery.h  mock_sys_info_svc_reply_msg.h  mock_time.h  mock_timer_callback_handler.h  mock_topology.h  pbuf.h
test/scripts/: README.md  conftest.py  environment.yml  neighbors_helper.py  serial_helper.py  test_config.py  test_dfu.py  test_info.py  test_neighbors.py  test_ping.py  test_time.py  test_topology.py  tests_to_run.txt  topology_helper.py  util.py
test/src/: aligned_malloc_test.cpp  bcmp_test.cpp  bm_adin2111_test.cpp  bm_link_heartbeat_monitor_test.cpp  bm_linux_test.cpp  bm_service_request_test.cpp  bm_service_test.cpp  bristlemouth_test.cpp  cb_queue_test.cpp  cbor_service_helper_test.cpp  config_cbor_map_service_test.cpp  config_test.cpp  configuration_test.cpp  dfu_test.cpp  echo_service_test.cpp  file_ops_test.cpp  hash_test.cpp  heartbeat_test.cpp  info_test.cpp  l2_policy_test.cpp  l2_test.cpp  lib_state_machine_test.cpp  ll_test.cpp  ll_ut.cpp  metrics_reply_msg_test.cpp  neighbors_test.cpp  packet_test.cpp  packet_ut.cpp  pcap_test.cpp  ping_test.cpp  power_info_service_test.cpp  pubsub_test.cpp  q_test.cpp  queue_test.cpp  resource_discovery_test.cpp  resource_trie_test.cpp  spotter_test.cpp  sys_info_service_test.cpp  time_remaining_test.cpp  time_test.cpp  (+3 more)
test/stubs/: bcmp_stub.c  bm_adin2111_stub.c  bm_ip_stub.c  bm_os.c  bm_os_stub.c  bm_rtc_stub.c  bm_rtos.c  bm_service_request_stub.c  bm_service_stub.c  cb_queue_stub.c  cbor_service_helper_stub.c  config_cbor_map_srv_reply_msg_stub.c  config_cbor_map_srv_request_msg_stub.c  config_stub.c  configuration_stub.c  device_stub.c  dfu_generic_stub.c  dfu_stub.c  heartbeat_stub.c  info_stub.c  l2_stub.c  middleware_stub.c  neighbor_stub.c  neighbors_stub.c  packet_stub.c  ping_stub.c  power_info_reply_msg_stub.c  power_info_service_stub.c  pubsub_stub.c  resource_discovery_stub.c  sys_info_svc_reply_msg_stub.c  time_stub.c  timer_callback_handler_stub.c  topology_stub.c
